Programming languages and paradigms/Interpreter/examples/bad/assignment_mismatch.ho
func main() {
    var x, y, z = 1; // error:2:5: assignment mismatch
}